<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rocket Logbook</string>

    //Menus
    <string name="action_settings">Settings</string>
    <string name="add_menu">Add Test item</string>
    <string name="add_rocket">New Rocket</string>
    <string name="add_flightlog">New Flight Log</string>
    <string name="confirm_menu">Done</string>
    <string name="cancel_menu">Discard</string>
    <string name="action_delete_all">Delete All</string>
    <string name="edit_menu">Edit</string>
    <string name="delete_menu">Delete</string>
    <string name="delete_selection_menu">Delete Selected</string>
    <string name="sort">Sort By</string>
    <string name="imageDialogTitle">Choose Photo</string>
    //sort
    <string name="sort_name">Name</string>
    <string name="sort_flights">Flight Count</string>
    <string name="sort_date">Launch Date</string>
    <string name="sort_motor">Motor</string>
    <string name="sort_result">Result</string>
    <string name="sort_alt">Altitude</string>

    //Activity Titles
    <string name="add_journal">New Journal</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Flight Logs</string>
    <string name="title_section2">Rockets</string>

    //fields
    <string name="motor_field">Motor</string>
    <string name="delay_field">Delay</string>
    <string name="name_field">Name</string>
    <string name="weight_field">Weight (lbs)</string>
    <string name="notes_field">Notes</string>
    <string name="results_field">Result</string>
    <string name="altitude_field">Altitude (ft)</string>
    <string name="image_change">Change Image</string>
    <string name="mTubeDiam_field">Max Motor Diameter</string>
    <string name="mTubeLen_field">Max Motor Length</string>
    <string name="chuteSize_field">Parachute Size</string>

    //FlightLog View
    <string name="spec_table">Rocket Info</string>
    <string name="motor_header">Motor:</string>
    <string name="j_view_motor">P1500-R 9 seconds</string>
    <string name="weight_header">Weight:</string>
    <string name="j_view_weight">1.3 lbs</string>
    <string name="flight_header">Flights:</string>
    <string name="flight_table">Flight Data</string>
    <string name="result_header">Result:</string>
    <string name="notes_header">Flight Notes</string>
    <string name="date_header">Date:</string>
    <string name="altitude_header">Max Altitude:</string>
    <string name="altitude_header_2">Altitude:</string>
    <string name="motorTubeDiam_header">Max Motor Diameter:</string>
    <string name="motorTubeLen_header">Max Motor Length:</string>
    <string name="chuteSize_header">Parachute Size:</string>

    //Error Messages
    <string name="error_invalid_delay">Invalid input; Delay must be a number</string>
    <string name="error_invalid_weight">Invalid input; Weight must be a number</string>
    <string name="error_invalid_mTD">Invalid input; Motor diameter must be a number</string>
    <string name="error_invalid_mTL">Invalid input; Motor length must be a number</string>
    <string name="error_invalid_chute">Invalid input; Parachute size must be a number</string>
    <string name="empty_list_rocket">You have no rockets,\npress add to get started</string>
    <string name="empty_list_flightlogs">You have no flight logs,\npress add to get started</string>
    <string name="error_invalid_altitude">Invalid input; Altitude must be a number</string>
    <string name="error_no_rockets">You need at least one rocket to create a flight log</string>

    //date formats
    <string name="date_format_use">@string/date_format_3</string>   //this one is the only value needed to change
    <string name="date_format_0">yy/MM/dd</string>
    <string name="date_format_1">"yyyy/MM/dd"</string>
    <string name="date_format_2">"dd MMM, yyyy"</string>
    <string name="date_format_3">"MMMM dd, yyyy"</string>
    <string name="date_format_4">dd, MMM, yyyy</string>

    //placeholders
    <string name="placeholder_name">Lorem Ipsum Dolor</string>
    <string name="placeholder_short_text">ipsum dolor</string>
    <string name="placeholder_date">14 Jun, 2013: 2:15 AM</string>
    <string name="placeholder_number">5123</string>
    <string name="placeholder_sentence">Lorem ipsum dolor sit amet, utamur antiopam molestiae ex quo.</string>
    <string name="placeholder_paragraph">\tLorem ipsum dolor sit amet, errem invenire referrentur ex
        cum, has ne postea percipit. Ut nec volumus suscipit, nullam appellantur ut vis, id brute
        aliquip alterum sit. Ut usu diam vulputate, et eos appetere inimicus hendrerit. Modo
        adipisci ocurreret nec id. No quo dicta iracundia, cu essent dicunt temporibus sed, est et
        ceteros expetenda dissentias.\n\t\n\tEu mel viderer fuisset torquatos, usu ei ridens probatus,
        ne qui habeo paulo impedit. Iudico primis prompta no cum, quidam alienum moderatius sea id,
        ad graeco iracundia rationibus duo. Utinam admodum salutatus mel ad, admodum alienum
        appellantur sed id, abhorreant vituperata ea eam. Ea elit prima constituam sit.</string>


</resources>
