<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_name"
        android:textSize="@dimen/medium_text"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_vertical_margin" />

    <TextView
        style="@style/display_text.bold"
        android:text="@string/spec_table"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <!-- Row 1 -->
        <TextView
            style="@style/table_text.bold"
            android:text="@string/motor_header"
            android:layout_row="0"
            android:layout_column="0"/>
        <Space
            android:layout_column="1"
            android:layout_width="@dimen/activity_horizontal_margin"/>

        <TextView
            style="@style/table_text"
            android:text="@string/j_view_motor"
            android:layout_row="0"
            android:layout_column="2"/>

        <!-- Row 2 -->
        <TextView
            style="@style/table_text.bold"
            android:text="@string/weight_header"
            android:layout_row="1"
            android:layout_column="0"/>
        <Space
            android:layout_column="1"
            android:layout_width="@dimen/activity_horizontal_margin"/>

        <TextView
            style="@style/table_text"
            android:text="@string/j_view_weight"
            android:layout_row="1"
            android:layout_column="2"/>
        </GridLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_vertical_margin" />

    <TextView
        style="@style/display_text.bold"
        android:text="@string/flight_table"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <!-- Row 1 -->
        <TextView
            style="@style/table_text.bold"
            android:text="@string/result_header"
            android:layout_row="0"
            android:layout_column="0"/>
        <Space
            android:layout_width="@dimen/activity_horizontal_margin"
            android:layout_column="1"/>
        <TextView
            style="@style/table_text"
            android:text="@string/placeholder_short_text"
            android:layout_row="0"
            android:layout_column="2"/>

        <!-- Row 2 -->
        <TextView
            style="@style/table_text.bold"
            android:text="@string/date_header"
            android:layout_column="0"
            android:layout_row="1"/>
        <Space
            android:layout_width="@dimen/activity_horizontal_margin"
            android:layout_column="1"/>
        <TextView
            style="@style/table_text"
            android:text="@string/placeholder_date"
            android:layout_column="2"
            android:layout_row="1"/>

        </GridLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_vertical_margin" />

    <TextView
        style="@style/display_text.bold"
        android:text="@string/notes_header"/>

    <TextView
        style="@style/display_text"
        android:text="@string/placeholder_paragraph"/>

</LinearLayout>