<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_name"
        android:id="@+id/r_name"
        android:textSize="@dimen/medium_text"/>

    <android.support.v7.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_vertical_margin" />

    <TextView
        style="@style/display_text.bold"
        android:text="@string/spec_table"/>

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <!-- Row 1 -->
        <TextView
            style="@style/table_text.bold"
            android:text="@string/motor_header"
            app:layout_row="0"
            app:layout_column="0"/>
        <android.support.v7.widget.Space
            app:layout_column="1"
            android:layout_width="@dimen/activity_horizontal_margin"/>

        <TextView
            style="@style/table_text"
            android:text="@string/j_view_motor"
            android:id="@+id/r_motor"
            app:layout_row="0"
            app:layout_column="2"/>

        <!-- Row 2 -->
        <TextView
            style="@style/table_text.bold"
            android:text="@string/weight_header"
            app:layout_row="1"
            app:layout_column="0"/>
        <android.support.v7.widget.Space
            app:layout_column="1"
            android:layout_width="@dimen/activity_horizontal_margin"/>

        <TextView
            style="@style/table_text"
            android:text="@string/j_view_weight"
            android:id="@+id/r_weight"
            app:layout_row="1"
            app:layout_column="2"/>
    </android.support.v7.widget.GridLayout>

    <android.support.v7.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_vertical_margin" />

    <TextView
        style="@style/display_text.bold"
        android:text="@string/flight_table"/>

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <!-- Row 1 -->
        <TextView
            style="@style/table_text.bold"
            android:text="@string/result_header"
            app:layout_row="0"
            app:layout_column="0"/>
        <android.support.v7.widget.Space
            android:layout_width="@dimen/activity_horizontal_margin"
            app:layout_column="1"/>
        <TextView
            style="@style/table_text"
            android:text="@string/placeholder_short_text"
            android:id="@+id/r_res"
            app:layout_row="0"
            app:layout_column="2"/>

        <!-- Row 2 -->
        <TextView
            style="@style/table_text.bold"
            android:text="@string/date_header"
            app:layout_column="0"
            app:layout_row="1"/>
        <android.support.v7.widget.Space
            android:layout_width="@dimen/activity_horizontal_margin"
            app:layout_column="1"/>
        <TextView
            style="@style/table_text"
            android:text="@string/placeholder_date"
            android:id="@+id/r_date"
            app:layout_column="2"
            app:layout_row="1"/>

    </android.support.v7.widget.GridLayout>

</LinearLayout>