<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/rocket_spinner"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:hint="@string/motor_field"
                android:id="@+id/motor_field" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/delay_field"
                android:id="@+id/delay_field" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/spinner" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:hint="@string/altitude_field"
                android:id="@+id/altitude_field"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/date_button"
                style="@style/Widget.AppCompat.Light.Base.Spinner"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textCapSentences"
                android:hint="@string/notes_field"
                android:id="@+id/notes_field" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>